--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
   },
   "peerDependencies": {
     "@mui/material": "^5.0.0 || ^6.0.0",
-    "react": "^17.0.2 || ^18.0.0"
+    "react": "^17.0.2 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.8.1"
   },
   "jest": {
     "setupFiles": [
