--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "standard": "^16.0.3"
   },
   "peerDependencies": {
-    "@mui/material": "^5.0.0 || ^6.0.0",
+    "@mui/material": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "react": "^17.0.2 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
