--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "test:coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "build": "babel src -d lib && rm lib/*.test.js && (find src -name \\*.d.ts -exec cp {} lib \\;)",
     "prepublishOnly": "babel src -d lib && rm lib/*.test.js && (find src -name \\*.d.ts -exec cp {} lib \\;)",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "standard-fix": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -35,42 +36,49 @@
   },
   "homepage": "https://github.com/TeamWertarbyte/material-ui-snackbar-provider#readme",
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/plugin-transform-object-assign": "^7.14.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^6.0.0",
-    "@mui/lab": "^6.0.0-beta.9",
-    "@mui/material": "^6.0.0",
-    "@storybook/addon-actions": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/addons": "^6.3.8",
-    "@storybook/react": "^6.3.8",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.2.2",
+    "@babel/cli": "^7.26.10",
+    "@babel/core": "^7.26.10",
+    "@babel/eslint-parser": "^7.27.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-object-assign": "^7.25.9",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/material": "^7.0.2",
+    "@storybook/addon-actions": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-webpack5": "^8.6.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "babel-loader": "^10.0.0",
     "coveralls": "^3.1.1",
-    "enzyme": "^3.11.0",
-    "jest": "^27.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "standard": "^16.0.3"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "standard": "^17.1.0",
+    "storybook": "^8.6.12"
   },
   "peerDependencies": {
-    "@mui/material": "^5.0.0 || ^6.0.0 || ^7.0.0",
-    "react": "^17.0.2 || ^18.0.0 || ^19.0.0"
+    "@mui/material": "^6.0.0 || ^7.0.0",
+    "react": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.6.1",
     "prop-types": "^15.8.1"
   },
   "jest": {
     "setupFiles": [
-      "./test/shim.js",
+      "./test/shim.js"
+    ],
+    "setupFilesAfterEnv": [
       "./test/jestsetup.js"
     ],
     "coveragePathIgnorePatterns": [
@@ -83,7 +91,26 @@
     "testEnvironment": "jsdom"
   },
   "standard": {
-    "parser": "babel-eslint"
+    "parser": "@babel/eslint-parser",
+    "parserOptions": {
+      "requireConfigFile": false,
+      "babelOptions": {
+        "presets": [
+          [
+            "@babel/preset-react",
+            {
+              "runtime": "automatic"
+            }
+          ],
+          "@babel/preset-env"
+        ],
+        "plugins": [
+          "@babel/plugin-transform-class-properties",
+          "@babel/plugin-transform-object-assign",
+          "@babel/plugin-transform-object-rest-spread"
+        ]
+      }
+    }
   },
   "files": [
     "LICENSE",
